cmake_minimum_required(VERSION 3.16)
set(project_name compiler)
project(${project_name} CXX)
set(CMAKE_CXX_STANDARD 17)

file(GLOB_RECURSE source_files "src/*.cpp")
link_libraries("/usr/local/lib/libantlr4-runtime.a")
add_compile_options(-g -std=c++17 -O2)
include_directories(src)
include_directories(src/antlr)
include_directories(src/frontend)
include_directories(src/ir)
include_directories(src/ir/function)
include_directories(src/ir/instruction)
include_directories(src/ir/value/type)
include_directories(src/ir/value)
include_directories(src/pass)
include_directories(src/pass/analysis)
include_directories(src/pass/analysis/dominance)
include_directories(src/pass/interprocedural)
include_directories(src/pass/interprocedural/deadCodeElim)
include_directories(src/pass/interprocedural/dominance)
include_directories(src/pass/interprocedural/ssa)
include_directories(/usr/local/include/antlr4.12-runtime)
add_executable(compiler ${source_files})